# g3xuploader

./: .coverage  .gitignore  99-g3x-sdcard.rules  ARCHITECTURE.md  IMPLEMENTATION_STATUS.md  LICENSE  MERGE_COMPLETE.md  PHASE1_COMPLETE.md  README.md  README_UNIFIED.md  avcardtool_wrapper.py  config.json  db.md  g3x-processor@.service  g3x_processor.py  install.sh  install_unified.sh  installdb.sh  log_20260327_152821_KOAK.csv  log_20260327_152822_KOAK.csv  package_deb.sh  pyproject.toml
.claude/: settings.local.json
.github/workflows/: release.yml
src/avcardtool/: __init__.py  cli.py
src/avcardtool/core/: __init__.py  config.py  processed_files.py  utils.py
src/avcardtool/flight_data/: __init__.py  analyzer.py
src/avcardtool/flight_data/analyzers/: __init__.py  flight_detector.py  hobbs.py  oooi.py  tach.py
src/avcardtool/flight_data/base/: __init__.py  processor.py  uploader.py
src/avcardtool/flight_data/processors/: __init__.py  garmin_g3x.py
src/avcardtool/flight_data/uploaders/: __init__.py  carryd.py  cloudahoy.py  eablog.py  flysto.py  maintenance_tracker.py  mock.py  savvy_aviation.py
src/avcardtool/navdata/: sdcard.py
src/avcardtool/navdata/garmin/: api.py  auth.py  feat_unlk.py  taw_parser.py
src/aviation_tools/: __init__.py  cli.py
src/aviation_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/aviation_tools/core/: __init__.py  config.py  utils.py
src/aviation_tools/flight_data/: __init__.py  analyzer.py
src/aviation_tools/flight_data/analyzers/: __init__.py  flight_detector.py  hobbs.py  oooi.py  tach.py
src/aviation_tools/flight_data/base/: __init__.py  uploader.py
src/aviation_tools/flight_data/processors/: __init__.py  garmin_g3x.py
src/g3x_database_updater.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/g3x_db_updater/: __init__.py  cli.py  garmin_auth.py
systemd/: 99-avcardtool-sdcard.rules  99-avcardtool.rules  99-g3x-db-sdcard.rules  avcardtool-navdata-watch@.service  avcardtool-navdata@.service  avcardtool-processor@.service  avcardtool-self-update.service  avcardtool-self-update.timer  avcardtool-sudoers  g3x-db-updater@.service
tests/: conftest.py  test_garmin_g3x.py  test_sdcard_writer.py  test_taw_parser.py  test_uploaders.py
