[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "avcardtool"
version = "1.0.0"
description = "Aviation SD card tool - Flight data processing and navigation database management for general aviation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "AVCardTool Contributors"}
]
keywords = [
    "aviation",
    "flight-data",
    "garmin",
    "g3x",
    "navigation-database",
    "hobbs",
    "tach",
    "oooi",
    "cloudahoy",
    "sd-card",
    "automation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "requests>=2.28.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "types-requests>=2.28.0",
]

[project.scripts]
avcardtool = "avcardtool.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/avcardtool"
Repository = "https://github.com/yourusername/avcardtool.git"
Issues = "https://github.com/yourusername/avcardtool/issues"
Documentation = "https://github.com/yourusername/avcardtool/blob/main/README.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=avcardtool --cov-report=term-missing"
