[tool.poetry]
name = "avcardtool"
version = "1.2.0"
description = "Aviation SD card tool - Flight data processing and navigation database management for general aviation"
authors = ["AVCardTool Contributors"]
license = "MIT"
readme = "README.md"
packages = [{include = "avcardtool", from = "src"}]
keywords = [
    "aviation",
    "flight-data",
    "garmin",
    "g3x",
    "navigation-database",
    "hobbs",
    "tach",
    "oooi",
    "cloudahoy",
    "sd-card",
    "automation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
requests = "^2.28.0"
click = "^8.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.0.0"
types-requests = "^2.28.0"
pyinstaller = "^6.19.0"
nuitka = "^4.0.7"

[tool.poetry.scripts]
avcardtool = "avcardtool.cli:main"

[tool.poetry.urls]
Homepage = "https://github.com/yourusername/avcardtool"
Repository = "https://github.com/yourusername/avcardtool.git"
Issues = "https://github.com/yourusername/avcardtool/issues"
Documentation = "https://github.com/yourusername/avcardtool/blob/main/README.md"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=avcardtool --cov-report=term-missing"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
